--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="./css/style.css">
 <script src="./js/form.js"></script>
 <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="wrapper">    
@@ -40,19 +40,20 @@
                 <option value="Other">Other</option>
             </select>
         </div>
+       
         <div class="radio">
             <label for="rad">Would you recommend freeCodeCamp to a friend?</label>
                 <div class="radio-combo">
-                    <input id="rad" type="radio" name="Definitely" value="Definitely">Definitely<br>
+                    <input id="rad" type="radio" name="Definitely" value="Definitely"><span class="radio-text">Definitely</span><br>
                 </div>
                 <div class="radio-combo">
-                    <input id="rad" type="radio" name="Maybe" value="Maybe">Maybe<br>
+                    <input id="rad" type="radio" name="Maybe" value="Maybe"><span class="radio-text">Maybe</span><br>
                 </div>
                 <div class="radio-combo">
-                    <input id="rad" type="radio" name="Not sure" value="Not sure">Not sure<br>    
-                </div>        
-
+                    <input id="rad" type="radio" name="Not sure" value="Not sure"><span class="radio-text">Not sure</span><br>    
+                </div>     
         </div>
+        
 <label for="">What is your favorite feature of freeCodeCamp?</label>
 <select id="role" placeholder="Select an option">
     <option value="Challenges">Challenges</option>
